--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pydantic = "^1.10.8"
 pytest = "^7.3.1"
 pytest-cov = "^4.1.0"
 mypy = "^1.3.0"
+mkdocs = "^1.4.3"
 
 [build-system]
 requires = ["poetry-core"]
