--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pytest = "^7.3.1"
 pytest-cov = "^4.1.0"
 mypy = "^1.3.0"
 mkdocs = "^1.4.3"
+mkdocs-material = "^9.1.18"
 
 [build-system]
 requires = ["poetry-core"]
