--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -27,7 +27,7 @@ theme:
       name: Switch to light mode
 
 nav:
-    - About pydantic-zarr: index.md
+    - About: index.md
     - Usage: intro.md
 
 markdown_extensions:
@@ -40,5 +40,5 @@ markdown_extensions:
   - pymdownx.superfences
   - toc:
       baselevel: 2
-      toc_depth: 3
+      toc_depth: 4
       permalink: "#"
