--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ pytest-cov = "^4.1.0"
 mypy = "^1.3.0"
 mkdocs = "^1.4.3"
 mkdocs-material = "^9.1.18"
-mkdocstrings = "^0.22.0"
+mkdocstrings = {extras = ["python"], version = "^0.22.0"}
 pytest-examples = "^0.0.9"
 
 [build-system]
