docs: separate docs packaging, use --with variant of poetry install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,5 @@ jobs:
             mkdocs-material-
       - run: |
             pip install poetry
-            poetry install
+            poetry install --with docs
             mkdocs gh-deploy --force
