docs: use poetry run to invoke mkdocs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,4 @@ jobs:
       - run: |
             pip install poetry
             poetry install --with docs
-            mkdocs gh-deploy --force
+            poetry run mkdocs gh-deploy --force
