--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,7 +6,8 @@ jobs:
     build-n-publish:
       name: Build and publish Python 🐍 distributions 📦 to PyPI
       runs-on: ubuntu-latest
-      if: startsWith(github.ref, 'refs/tags')
+      if: 
+        startsWith(github.ref, 'refs/tags')
       steps:
         - uses: actions/checkout@v3
         - name: Set up Python
