--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,16 @@ packages = [{include = "pydantic_zarr", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 zarr = "^2.14.2"
-pydantic = "^1.10.8"
+pydantic = "^2.0.0"
+typing-extensions = {version = "^4.7.1", python = "<3.12"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
 pytest-cov = "^4.1.0"
 mypy = "^1.3.0"
+pre-commit = "^3.3.3"
+black = "23.7.0"
+ruff = "0.0.277"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.4.3"
