--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,7 +1,9 @@
 name: Build and publish Python 🐍 distributions 📦 to PyPI
 
-on: push
-
+on: 
+  push:
+    branches:
+      - main
 jobs:
     build-n-publish:
       name: Build and publish Python 🐍 distributions 📦 to PyPI
