--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.9"
 zarr = "^2.14.2"
 pydantic = "^2.0.0"
 typing-extensions = {version = "^4.7.1", python = "<3.12"}
+eval-type-backport = "^0.1.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
